src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>L2__c</fullName>
        <label>Reason Category</label>
        <picklist>
            <controllingField>Reason_For_Call__c</controllingField>
            <picklistValues>
                <fullName>Grievance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback / General Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Intimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Date Intimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Intimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Know Your Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promised to pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Bank Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asked to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L3__c</fullName>
        <label>Reason Sub Category</label>
        <picklist>
            <controllingField>L2__c</controllingField>
            <picklistValues>
                <fullName>Interest waiver not accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car parks not being alloted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay in registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs to talk to a senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs to talk to Promoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised area not acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants to resell prior to lock in ending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disputing resale transfer charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mis-selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contemplating Legal Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disputing changes in Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concerns due to media report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old payment not reflecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat issues on possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate invoice request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ledger required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect certificate request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVAT and Stamp duty details required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDS Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs copy of Agreement for Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haven&apos;t received confirmation / Allotment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in correspondance requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in applicant name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale process enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale NOC request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <description>Also using for Loan Officer Contact Number</description>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_Webform__c</fullName>
        <description>web2lead enquiry mobile number</description>
        <label>Mobile Number Webform</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_Banks__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>OBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venue Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_TL__c</fullName>
        <label>Closing TL</label>
        <picklist>
            <picklistValues>
                <fullName>Gaurav Baranwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaustabh P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyur P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Sirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkin Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Harale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shreshta C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Mishra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Pathak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiran Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reema Kadam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Email__c</fullName>
        <label>New Channel Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Name__c</fullName>
        <label>New Channel Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Phone__c</fullName>
        <label>New Channel Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date__c</fullName>
        <label>Next Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTP_Amount__c</fullName>
        <inlineHelpText>Amount promised</inlineHelpText>
        <label>PTP Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTP_Date1__c</fullName>
        <label>PTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTP_Date__c</fullName>
        <inlineHelpText>Promise to Pay Date</inlineHelpText>
        <label>PTP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Instrument__c</fullName>
        <description>Two values of this field  is also used for Home loan  home loan closure, transfer of home loan,</description>
        <label>Payment Instrument</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Draft / Pay Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Call_Attempt_Status__c</fullName>
        <label>Previous Call Attempt Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Call_Rating__c</fullName>
        <label>Previous Call Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectInterestedWeb__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Interested will be used by web enquiries as well, call attempts entered by presales team</description>
        <label>Project Interested</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Date_of_Visit__c</fullName>
        <label>Proposed Date of Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RM__c</fullName>
        <label>RM</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Jonita D’souza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manisha Khandagale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suchika Ahuja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mousumi Dey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shital Mahale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amruta Kamble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rashi Khare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tarun Thakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandeep Marne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siddharth Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagdish Purohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisha Shaikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kriti Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deepali Dange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameeth Katay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jyotsna Shrivastava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neetu Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Deokule</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Call__c</fullName>
        <label>Reason For Call</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Lost__c</fullName>
        <label>Reason For Lost</label>
        <picklist>
            <controllingField>Call_Attempt_Status__c</controllingField>
            <picklistValues>
                <fullName>3rd Party Answers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked With Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked With Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired Configuration Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Enquire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Contactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested in real estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Looking For Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Date Mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Inbound__c</fullName>
        <label>Reason for Inbound Communication</label>
        <picklist>
            <controllingField>Communication_Type__c</controllingField>
            <picklistValues>
                <fullName>Project information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed / Abandon call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directional query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Outbound_Communication__c</fullName>
        <label>Reason for Outbound Communication</label>
        <picklist>
            <controllingField>Communication_Type__c</controllingField>
            <picklistValues>
                <fullName>Cross project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit reminder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registraion_Status__c</fullName>
        <description>registration related</description>
        <label>Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Date_Time__c</fullName>
        <description>reigstration related</description>
        <label>Reporting Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a visit or a revisit record</description>
        <label>Revisit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_Activity_Created_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Activity Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Attempted_By__c</fullName>
        <label>Sales Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Mantri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Harale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiran Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanmay Gore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namita Hiremath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavan Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadip Thakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omkar Patil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_ManagerL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowWalkInSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Walk In Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourcing_Manager__c</fullName>
        <label>Sourcing Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Harale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shailesh Khandelwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vickrant Agarwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Mantri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiran Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reema Kadam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanmay Gore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namita Hiremath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sourcing_TL__c</fullName>
        <label>Sourcing TL</label>
        <picklist>
            <picklistValues>
                <fullName>Vivek Mishra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaustabh P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Baranwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Harale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiran Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reema Kadam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specify_Others__c</fullName>
        <label>Specify Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_duty_charges_to_be_paid__c</fullName>
        <label>Stamp duty charges to be paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Milestone name against which the customer payment needs to be collected.</inlineHelpText>
        <label>Standard Customer Pay Plan Detail</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Standard_Customer_Pay_Plan_Detail__c.Charge_Amount_Due__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <filterItems>
                <field>$Source.WhatId</field>
                <operation>equals</operation>
                <valueField>Standard_Customer_Pay_Plan_Detail__c.Customer_Pay_Plan_Header__r.Customer__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Collections Call Details</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Closure_Date__c</fullName>
        <label>Task Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enquiry Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Attended_By__c</fullName>
        <label>Team Attended By</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UTM_Display__c</fullName>
        <label>UTM Display</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <label>UTM Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Form_No__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Visit Form Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visited_With__c</fullName>
        <label>Visited With</label>
        <picklist>
            <picklistValues>
                <fullName>Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onbehalf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visitor_Name__c</fullName>
        <label>Visitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_in_Respective_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities Customer (Walk-in Respective Customer Account)</relationshipLabel>
        <relationshipName>ActivitiesCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>